--- a/DES/DES.csproj
+++ b/DES/DES.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Cryptography.Extensions\Cryptography.Extensions.csproj" />
+    </ItemGroup>
+
 </Project>
